// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timeline /> should open the Timeline panel 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-8 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  padding-left: 0;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  text-transform: uppercase;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-3:hover svg path,
.emotion-3.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-2 {
  width: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 4px;
  padding-right: 0;
}

.emotion-6 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #808080;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-6:hover,
.emotion-6.focus-visible:focus {
  color: #ffffff;
}

.emotion-6:hover svg,
.emotion-6.focus-visible:focus svg {
  opacity: 1;
}

.emotion-6[aria-disabled=true] {
  color: #808080;
}

.emotion-6:hover,
.emotion-6.focus-visible:focus {
  background-color: #2e2e2e;
  color: #ffffff;
}

.emotion-6:hover svg path,
.emotion-6.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-5 {
  width: 4px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 200px;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-9 {
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  top: 0;
  bottom: 0;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 44px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: overlay;
}

.emotion-10 {
  width: 100%;
}

.emotion-1 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.emotion-15 {
  height: 0;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "width": "100%",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-8"
  >
    <div
      className="emotion-4"
    >
      <button
        aria-label="Open Timeline"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          color="#808080"
          data-file-name="doubleChevron.svg"
          height={20}
        />
        <div
          className="emotion-2"
        />
        Timeline
      </button>
    </div>
    <TimelineControls
      length={18}
      settings={
        Object {
          "filter": "",
          "timelines": Object {},
          "width": 200,
          "zoom": 100,
        }
      }
      timelines={Array []}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <div
      className="emotion-7"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": Object {
              "addEventListener": [Function],
              "currentTime": 0,
              "duration": 18,
              "pause": [Function],
              "paused": true,
              "play": [Function],
              "removeEventListener": [Function],
            },
          }
        }
      />
      <button
        aria-label="Open Metadata"
        className="emotion-6"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#808080"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-5"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-15"
  >
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-9"
          onMouseDown={[Function]}
        />
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
          zoom={100}
        />
        <div
          className="emotion-12"
        >
          <TimelineFilterTracks
            dispatch={[Function]}
            settings={
              Object {
                "filter": "",
                "timelines": Object {},
                "width": 200,
                "zoom": 100,
              }
            }
          />
          <div
            className="emotion-11"
          >
            <div
              className="emotion-10"
            >
              <TimelineRuler
                length={18}
                settings={
                  Object {
                    "filter": "",
                    "timelines": Object {},
                    "width": 200,
                    "zoom": 100,
                  }
                }
                videoRef={
                  Object {
                    "current": Object {
                      "addEventListener": [Function],
                      "currentTime": 0,
                      "duration": 18,
                      "pause": [Function],
                      "paused": true,
                      "play": [Function],
                      "removeEventListener": [Function],
                    },
                  }
                }
              />
            </div>
          </div>
        </div>
        <TimelineAggregate
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "timelines": Object {},
              "width": 200,
              "zoom": 100,
            }
          }
          timelineHeight={200}
          timelines={Array []}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineTimelines
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "timelines": Object {},
              "width": 200,
              "zoom": 100,
            }
          }
          timelines={Array []}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should open the Timeline panel 2`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-8 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  padding-left: 0;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  text-transform: uppercase;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-3:hover svg path,
.emotion-3.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-1 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-2 {
  width: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 4px;
  padding-right: 0;
}

.emotion-6 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #808080;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-6:hover,
.emotion-6.focus-visible:focus {
  color: #ffffff;
}

.emotion-6:hover svg,
.emotion-6.focus-visible:focus svg {
  opacity: 1;
}

.emotion-6[aria-disabled=true] {
  color: #808080;
}

.emotion-6:hover,
.emotion-6.focus-visible:focus {
  background-color: #2e2e2e;
  color: #ffffff;
}

.emotion-6:hover svg path,
.emotion-6.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-5 {
  width: 4px;
}

.emotion-15 {
  height: 200px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 200px;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-9 {
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  top: 0;
  bottom: 0;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 44px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: overlay;
}

.emotion-10 {
  width: 100%;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "width": "100%",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-8"
  >
    <div
      className="emotion-4"
    >
      <button
        aria-label="Close Timeline"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          color="#808080"
          data-file-name="doubleChevron.svg"
          height={20}
        />
        <div
          className="emotion-2"
        />
        Timeline
      </button>
    </div>
    <TimelineControls
      length={18}
      settings={
        Object {
          "filter": "",
          "timelines": Object {},
          "width": 200,
          "zoom": 100,
        }
      }
      timelines={Array []}
      videoRef={
        Object {
          "current": Object {
            "addEventListener": [Function],
            "currentTime": 0,
            "duration": 18,
            "pause": [Function],
            "paused": true,
            "play": [Function],
            "removeEventListener": [Function],
          },
        }
      }
    />
    <div
      className="emotion-7"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": Object {
              "addEventListener": [Function],
              "currentTime": 0,
              "duration": 18,
              "pause": [Function],
              "paused": true,
              "play": [Function],
              "removeEventListener": [Function],
            },
          }
        }
      />
      <button
        aria-label="Open Metadata"
        className="emotion-6"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#808080"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-5"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-15"
  >
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-9"
          onMouseDown={[Function]}
        />
        <TimelinePlayhead
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
          zoom={100}
        />
        <div
          className="emotion-12"
        >
          <TimelineFilterTracks
            dispatch={[Function]}
            settings={
              Object {
                "filter": "",
                "timelines": Object {},
                "width": 200,
                "zoom": 100,
              }
            }
          />
          <div
            className="emotion-11"
          >
            <div
              className="emotion-10"
            >
              <TimelineRuler
                length={18}
                settings={
                  Object {
                    "filter": "",
                    "timelines": Object {},
                    "width": 200,
                    "zoom": 100,
                  }
                }
                videoRef={
                  Object {
                    "current": Object {
                      "addEventListener": [Function],
                      "currentTime": 0,
                      "duration": 18,
                      "pause": [Function],
                      "paused": true,
                      "play": [Function],
                      "removeEventListener": [Function],
                    },
                  }
                }
              />
            </div>
          </div>
        </div>
        <TimelineAggregate
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "timelines": Object {},
              "width": 200,
              "zoom": 100,
            }
          }
          timelineHeight={200}
          timelines={Array []}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
        <TimelineTimelines
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "timelines": Object {},
              "width": 200,
              "zoom": 100,
            }
          }
          timelines={Array []}
          videoRef={
            Object {
              "current": Object {
                "addEventListener": [Function],
                "currentTime": 0,
                "duration": 18,
                "pause": [Function],
                "paused": true,
                "play": [Function],
                "removeEventListener": [Function],
              },
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Timeline /> should render properly 1`] = `
.emotion-0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: row-resize;
  height: 4px;
  margin-top: -2px;
  margin-bottom: -2px;
  z-index: 10;
}

.emotion-8 {
  padding-left: 8px;
  padding-right: 8px;
  background-color: #252525;
  color: #808080;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  padding-left: 0;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  text-transform: uppercase;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  color: #ffffff;
}

.emotion-3:hover svg,
.emotion-3.focus-visible:focus svg {
  opacity: 1;
}

.emotion-3[aria-disabled=true] {
  color: #808080;
}

.emotion-3:hover,
.emotion-3.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-3:hover svg path,
.emotion-3.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-1 {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.emotion-2 {
  width: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding: 4px;
  padding-right: 0;
}

.emotion-6 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  color: #808080;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 4px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
  color: #808080;
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-6[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-6:hover,
.emotion-6.focus-visible:focus {
  color: #ffffff;
}

.emotion-6:hover svg,
.emotion-6.focus-visible:focus svg {
  opacity: 1;
}

.emotion-6[aria-disabled=true] {
  color: #808080;
}

.emotion-6:hover,
.emotion-6.focus-visible:focus {
  background-color: #2e2e2e;
  color: #ffffff;
}

.emotion-6:hover svg path,
.emotion-6.focus-visible:focus svg path {
  fill: #ffffff;
}

.emotion-5 {
  width: 4px;
}

.emotion-15 {
  height: 200px;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 200px;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 0%;
  position: relative;
  margin-left: 200px;
  border-left: 1px solid #3b3b3b;
}

.emotion-9 {
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: col-resize;
  top: 0;
  bottom: 0;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
  z-index: 10;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 44px;
}

.emotion-11 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: overlay;
}

.emotion-10 {
  width: 100%;
}

<div
  style={
    Object {
      "alignItems": "stretch",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "nowrap",
      "width": "100%",
    }
  }
>
  <div
    aria-label="Resize vertically"
    className="emotion-0"
    onMouseDown={[Function]}
  />
  <div
    className="emotion-8"
  >
    <div
      className="emotion-4"
    >
      <button
        aria-label="Close Timeline"
        className="emotion-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          className="emotion-1"
          color="#808080"
          data-file-name="doubleChevron.svg"
          height={20}
        />
        <div
          className="emotion-2"
        />
        Timeline
      </button>
    </div>
    <TimelineControls
      length={18}
      settings={
        Object {
          "filter": "",
          "timelines": Object {
            "gcp-video-explicit-detection": Object {
              "color": "#0074f5",
              "isOpen": false,
              "isVisible": true,
            },
            "gcp-video-label-detection": Object {
              "color": "#a03dc7",
              "isOpen": false,
              "isVisible": true,
            },
            "gcp-video-logo-detection": Object {
              "color": "#ebb52e",
              "isOpen": false,
              "isVisible": true,
            },
            "gcp-video-object-detection": Object {
              "color": "#d6680b",
              "isOpen": false,
              "isVisible": true,
            },
            "gcp-video-text-detection": Object {
              "color": "#00bdc1",
              "isOpen": false,
              "isVisible": true,
            },
          },
          "width": 200,
          "zoom": 100,
        }
      }
      timelines={
        Array [
          Object {
            "timeline": "gcp-video-explicit-detection",
            "tracks": Array [
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Gh st",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 6,
                    "stop": 7,
                  },
                  Object {
                    "start": 13,
                    "stop": 14,
                  },
                  Object {
                    "start": 15,
                    "stop": 15,
                  },
                ],
                "track": "Busters",
              },
            ],
          },
          Object {
            "timeline": "gcp-video-label-detection",
            "tracks": Array [
              Object {
                "hits": Array [
                  Object {
                    "start": 1,
                    "stop": 2,
                  },
                  Object {
                    "start": 3,
                    "stop": 6,
                  },
                  Object {
                    "start": 11,
                    "stop": 15,
                  },
                ],
                "track": "Label 1",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 7,
                    "stop": 10,
                  },
                  Object {
                    "start": 16,
                    "stop": 17,
                  },
                ],
                "track": "Label 2 Plus More Text to Make A Long Label String",
              },
            ],
          },
          Object {
            "timeline": "gcp-video-object-detection",
            "tracks": Array [
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Object 1",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Object 2",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Object 3",
              },
            ],
          },
          Object {
            "timeline": "gcp-video-logo-detection",
            "tracks": Array [
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Logo 1",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Logo 2",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Logo 3",
              },
            ],
          },
          Object {
            "timeline": "gcp-video-text-detection",
            "tracks": Array [
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Text 1",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Text 2",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Text 3",
              },
              Object {
                "hits": Array [
                  Object {
                    "start": 0,
                    "stop": 2,
                  },
                  Object {
                    "start": 4,
                    "stop": 5,
                  },
                  Object {
                    "start": 10,
                    "stop": 12,
                  },
                ],
                "track": "Text 4",
              },
            ],
          },
        ]
      }
      videoRef={
        Object {
          "current": undefined,
        }
      }
    />
    <div
      className="emotion-7"
    >
      <TimelineCaptions
        initialTrackIndex={-1}
        videoRef={
          Object {
            "current": undefined,
          }
        }
      />
      <button
        aria-label="Open Metadata"
        className="emotion-6"
        onClick={[Function]}
        type="button"
      >
        <svg
          color="#808080"
          data-file-name="timebasedMetadata.svg"
          height={20}
        />
        <div
          className="emotion-5"
        />
        Metadata
      </button>
    </div>
  </div>
  <div
    className="emotion-15"
  >
    <div
      className="emotion-14"
    >
      <div
        className="emotion-13"
      >
        <div
          className="emotion-9"
          onMouseDown={[Function]}
        />
        <TimelinePlayhead
          videoRef={
            Object {
              "current": undefined,
            }
          }
          zoom={100}
        />
        <div
          className="emotion-12"
        >
          <TimelineFilterTracks
            dispatch={[Function]}
            settings={
              Object {
                "filter": "",
                "timelines": Object {
                  "gcp-video-explicit-detection": Object {
                    "color": "#0074f5",
                    "isOpen": false,
                    "isVisible": true,
                  },
                  "gcp-video-label-detection": Object {
                    "color": "#a03dc7",
                    "isOpen": false,
                    "isVisible": true,
                  },
                  "gcp-video-logo-detection": Object {
                    "color": "#ebb52e",
                    "isOpen": false,
                    "isVisible": true,
                  },
                  "gcp-video-object-detection": Object {
                    "color": "#d6680b",
                    "isOpen": false,
                    "isVisible": true,
                  },
                  "gcp-video-text-detection": Object {
                    "color": "#00bdc1",
                    "isOpen": false,
                    "isVisible": true,
                  },
                },
                "width": 200,
                "zoom": 100,
              }
            }
          />
          <div
            className="emotion-11"
          >
            <div
              className="emotion-10"
            >
              <TimelineRuler
                length={18}
                settings={
                  Object {
                    "filter": "",
                    "timelines": Object {
                      "gcp-video-explicit-detection": Object {
                        "color": "#0074f5",
                        "isOpen": false,
                        "isVisible": true,
                      },
                      "gcp-video-label-detection": Object {
                        "color": "#a03dc7",
                        "isOpen": false,
                        "isVisible": true,
                      },
                      "gcp-video-logo-detection": Object {
                        "color": "#ebb52e",
                        "isOpen": false,
                        "isVisible": true,
                      },
                      "gcp-video-object-detection": Object {
                        "color": "#d6680b",
                        "isOpen": false,
                        "isVisible": true,
                      },
                      "gcp-video-text-detection": Object {
                        "color": "#00bdc1",
                        "isOpen": false,
                        "isVisible": true,
                      },
                    },
                    "width": 200,
                    "zoom": 100,
                  }
                }
                videoRef={
                  Object {
                    "current": undefined,
                  }
                }
              />
            </div>
          </div>
        </div>
        <TimelineAggregate
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "timelines": Object {
                "gcp-video-explicit-detection": Object {
                  "color": "#0074f5",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-label-detection": Object {
                  "color": "#a03dc7",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-logo-detection": Object {
                  "color": "#ebb52e",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-object-detection": Object {
                  "color": "#d6680b",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-text-detection": Object {
                  "color": "#00bdc1",
                  "isOpen": false,
                  "isVisible": true,
                },
              },
              "width": 200,
              "zoom": 100,
            }
          }
          timelineHeight={200}
          timelines={
            Array [
              Object {
                "timeline": "gcp-video-explicit-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Gh st",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 6,
                        "stop": 7,
                      },
                      Object {
                        "start": 13,
                        "stop": 14,
                      },
                      Object {
                        "start": 15,
                        "stop": 15,
                      },
                    ],
                    "track": "Busters",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-label-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 1,
                        "stop": 2,
                      },
                      Object {
                        "start": 3,
                        "stop": 6,
                      },
                      Object {
                        "start": 11,
                        "stop": 15,
                      },
                    ],
                    "track": "Label 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 7,
                        "stop": 10,
                      },
                      Object {
                        "start": 16,
                        "stop": 17,
                      },
                    ],
                    "track": "Label 2 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-object-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Object 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Object 2",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Object 3",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-logo-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Logo 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Logo 2",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Logo 3",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-text-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 2",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 3",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 4",
                  },
                ],
              },
            ]
          }
          videoRef={
            Object {
              "current": undefined,
            }
          }
        />
        <TimelineTimelines
          dispatch={[Function]}
          length={18}
          settings={
            Object {
              "filter": "",
              "timelines": Object {
                "gcp-video-explicit-detection": Object {
                  "color": "#0074f5",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-label-detection": Object {
                  "color": "#a03dc7",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-logo-detection": Object {
                  "color": "#ebb52e",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-object-detection": Object {
                  "color": "#d6680b",
                  "isOpen": false,
                  "isVisible": true,
                },
                "gcp-video-text-detection": Object {
                  "color": "#00bdc1",
                  "isOpen": false,
                  "isVisible": true,
                },
              },
              "width": 200,
              "zoom": 100,
            }
          }
          timelines={
            Array [
              Object {
                "timeline": "gcp-video-explicit-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Gh st",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 6,
                        "stop": 7,
                      },
                      Object {
                        "start": 13,
                        "stop": 14,
                      },
                      Object {
                        "start": 15,
                        "stop": 15,
                      },
                    ],
                    "track": "Busters",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-label-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 1,
                        "stop": 2,
                      },
                      Object {
                        "start": 3,
                        "stop": 6,
                      },
                      Object {
                        "start": 11,
                        "stop": 15,
                      },
                    ],
                    "track": "Label 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 7,
                        "stop": 10,
                      },
                      Object {
                        "start": 16,
                        "stop": 17,
                      },
                    ],
                    "track": "Label 2 Plus More Text to Make A Long Label String",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-object-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Object 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Object 2",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Object 3",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-logo-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Logo 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Logo 2",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Logo 3",
                  },
                ],
              },
              Object {
                "timeline": "gcp-video-text-detection",
                "tracks": Array [
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 1",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 2",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 3",
                  },
                  Object {
                    "hits": Array [
                      Object {
                        "start": 0,
                        "stop": 2,
                      },
                      Object {
                        "start": 4,
                        "stop": 5,
                      },
                      Object {
                        "start": 10,
                        "stop": 12,
                      },
                    ],
                    "track": "Text 4",
                  },
                ],
              },
            ]
          }
          videoRef={
            Object {
              "current": undefined,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
